2007-10-13  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat.c: Set chat state to ACTIVE when receiving
	a message from a contact, avoid staying in COMPOSING state forever for
	protocols like MSN that do not notify when contact stoped writing.

2007-10-13  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat-view.h:
	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/empathy-chat.c:
	* libempathy-gtk/empathy-chat-window.c:
	* libempathy-gtk/empathy-chat-view.c:
	* libempathy/empathy-log-manager.c:
	* libempathy/empathy-time.c:
	* libempathy/empathy-tp-chat.c:
	* libempathy/empathy-time.h:
	* libempathy/empathy-message.c:
	* libempathy/empathy-message.h:
	* libempathy/empathy-presence.c:
	* configure.ac: Don't use deprecated GtkTooltips API. Add commented out
	lines in configure.ac to disable GLib and GTK deprecated symbols.
	Replace EmpathyTime by time_t which is more appropriate for timestamps.

	* doc/*: Updated.

2007-10-13  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/empathy-presence-chooser.c:
	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-chat.c:
	* libempathy-gtk/empathy-contact-list-store.c:
	* libempathy-gtk/empathy-chat-window.c:
	* libempathy/empathy-idle.c:
	* tests/contact-manager.c: Use g_timeout_add_seconds when appropriated
	to avoid weaking the process too much.

2007-10-11  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: Set supress_handler to TRUE when
	creating new group channel.

2007-10-11  Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in: Add missing files.

2007-10-09  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump MissionControl version to 4.37, we uses new API
	introduced in that version.

2007-10-09  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c: