@@ -1,0 +1,7 @@
+[Profile]
+Manager=haze
+Protocol=aim
+DisplayName=AIM
+ConfigurationUI = aim
+Capabilities = chat-p2p, supports-alias
+
