@@ -1,0 +1,11 @@
+[Profile]
+Manager=sofiasip
+Protocol=sip
+DisplayName=SofiaSIP
+ConfigurationUI = sofiasip
+Capabilities = chat-p2p, chat-room, chat-room-list, voice-p2p, split-account, registration-ui, supports-avatars, supports-alias
+DefaultAccountDomain = sip.org
+SupportsInvisible = 0
+VCardField = X-SIP
+VCardDefault = true
+Default-ignore-ssl-errors = 1
